# headspace-cli

./: .gitignore  LICENCE  README.md  README_v_1-0-7.md  bearer_id.txt  manual_setup.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
headspace_dl/: __main__.py  auth.py
pyheadspace/: __main__.py  auth.py
tests/: test_pyheadspace.py
